--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -146,7 +146,7 @@
                                         <dt><i></i>产品模型</dt>
                                         <dd id="member_analysis"><a href="javascript:goToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
                                         </dd>
-                                        <dd id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易</a>
+                                        <dd id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易产品</a>
                                         </dd>
                                     </dl>
                                     <dl class="col-sm-3">
