修改查询国安优易动销sql

--- a/WebContent/crm/youyi_product.html
+++ b/WebContent/crm/youyi_product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>国安优易</title>
+    <title>国安优易产品</title>
     <!-- Tell the browser to be responsive to screen width -->
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
@@ -141,7 +141,7 @@
                 <div class="pull-left">
                     <div class="logo-lg">
                         <ul class="no-margin">
-                            <li class="current"><em>国安优易</em></li>
+                            <li class="current"><em>国安优易产品</em></li>
                         </ul>
                     </div>
                 </div>
