国安优易_添加X轴%

--- a/WebContent/crm/youyi_product.html
+++ b/WebContent/crm/youyi_product.html
@@ -693,6 +693,11 @@
                 },
                 xAxis: {
                     type: 'value',
+                    axisLabel: {
+                        show: true,
+                        interval: 'auto',
+                        formatter: '{value} %'
+                    },
                     boundaryGap: [0, 0.01]
                 },
                 yAxis: {
