--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -204,6 +204,8 @@
                                         <dt><i></i>分析图</dt>
                                         <dd><a href="javascript:gotok()"><span class="fa fa-line-chart"></span>营业额分析</a></dd>
 										<dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
+                                        <dd style="position:relative;"><a href="javascript:gotogax_work()"><span class="fa fa-life-buoy"></span>国安侠工作负荷分析</a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
 										<!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
                                     </dl>
                                     <dl class="col-sm-3">
