--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -138,16 +138,15 @@
                         </li>
                         <li>
                             <em>数据模型 </dd>
-                            <i class="glyphicon glyphicon-triangle-bottom"></i>
+                            <i class="glyphicon glyphicon-triangle-bottom"></i><img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
                             </em>
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                 	<dl class="col-sm-3">
                                         <dt><i></i>产品模型</dt>
-                                        <dd id="member_analysis"><a href="javascript:goToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
-                                        </dd>
-                                        <dd id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易产品</a>
-                                        </dd>
+                                        <dd id="member_analysis"><a href="javascript:goToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a></dd>
+                                        <dd style="position:relative;" id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易产品</a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>社区模型</dt>
@@ -204,14 +203,14 @@
                                         <dt><i></i>分析图</dt>
                                         <dd><a href="javascript:gotok()"><span class="fa fa-line-chart"></span>营业额分析</a></dd>
 										<dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
-                                        <dd style="position:relative;"><a href="javascript:gotogax_work()"><span class="fa fa-life-buoy"></span>国安侠工作负荷分析</a>
-                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+
 										<!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
                                     </dl>
                                     <dl class="col-sm-3">
-                                        <dt><i></i>运营专题</dt>
-                                        <dd style="position:relative;"><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a>
-                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dt><i></i>专题分析</dt>
+                                        <dd style="position:relative;"><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a></dd>
+                                        <dd style="position:relative;"><a href="javascript:gotogax_work()"><span class="fa fa-warning"></span>国安侠工作负荷分析</a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                 </div>
                             </div>
