空数据处理

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -145,7 +145,7 @@
                                 	<dl class="col-sm-3">
                                         <dt><i></i>产品模型</dt>
                                         <dd id="member_analysis"><a href="javascript:goToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a></dd>
-                                        <dd style="position:relative;" id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易产品</a>
+                                        <dd style="position:relative;" id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-bar-chart"></span>国安优易产品</a>
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                     <dl class="col-sm-3">
