--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -218,6 +218,7 @@
                 <li><a href="#tab_2" data-toggle="tab" onclick="showCostTag(2)">租金成本</a></li>
                 <li><a href="#tab_3" data-toggle="tab" onclick="showCostTag(3)">装修摊销</a></li>
                 <li><a href="#tab_4" data-toggle="tab" onclick="showCostTag(4)">固定资产</a></li>
+                <li><a href="#tab_5" data-toggle="tab" onclick="showCostTag(5)">水电费</a></li>
             </ul>
             <div class="tab-content no-padding">
                 <!-- 人工成本-->
