--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -98,9 +98,11 @@
           </div>
           <div class="box-body" style="padding: 0 50px;">
             <h3 style="margin-bottom: 20px;">国安侠饱和度分析</h3>
-            <div class="col-sm-4 no-padding">在编人数：<span id="empcount">加载中...</span>人</div>
+            <div class="col-sm-6 no-padding">在编人数：<span id="empcount">加载中...</span>人</div>
+<!--
             <div class="col-sm-4 no-padding">满编人数：<span id="fullempcount">加载中...</span>人</div>
-            <div class="col-sm-4 no-padding text-right">满编率：<span id="emprate">加载中...</span>%</div>
+-->
+            <div class="col-sm-6 no-padding text-right">满编人数：<span id="fullempcount">加载中...</span>人<span class='text-red' >（满编率：<b id="emprate">加载中...</b>）</span></div>
             <div class="progress col-sm-12 no-padding">
               <div id="emprateview" class="progress-bar progress-bar-aqua" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="sr-only">20% Complete</span>
@@ -774,7 +776,7 @@ function showEmployeeCount(){
             $("#empcount").html(humancount);
             $("#fullempcount").html(storeCount*10)
             var emprate =humancount*100/ (storeCount*10);
-            $("#emprate").html(emprate.toFixed(2));
+            $("#emprate").html(emprate.toFixed(2)+"%");
             $("#emprateview").attr("aria-valuenow",humancount);
             $("#emprateview").attr("aria-valuemax",storeCount*10);
             $("#emprateview").attr("style","width:"+emprate.toFixed(2)+"%;");
