--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -81,13 +81,13 @@
           <div class="box-body report">
             <div class="box-header h4"><strong>2018年国安侠送单量分析</strong></div>
             <div class="gax-head">
-              <p class="gax text-center">国安侠<span id="gaxcount">加载中...</span></p>
+              <p class="gax text-center">国安侠<span id="gaxcount">加载中...</span>人</p>
               <p class="col-sm-6 no-padding">城市：<span id="citycount">加载中...</span>个</p>
               <p class="col-sm-6 no-padding">门店：<span id="storecount">加载中...</span>个</p>
               <ul class="col-sm-12 no-padding">
-                <li>人均日送单量（单）：<span id="avgSendOrder">加载中...</span></li>
-                <li>人均日工作时间（h）：<span id="avgWorkTime">加载中...</span></li>
-                <li>人均日送单里程(km)：<span id="avgMileAge">加载中...</span></li>
+                <li>人均日送单量：<span id="avgSendOrder">加载中...</span>单</li>
+                <li>人均日工作时间：<span id="avgWorkTime">加载中...</span>小时</li>
+                <li>人均日送单里程：<span id="avgMileAge">加载中...</span>公里</li>
               </ul>
             </div>
           </div>
@@ -97,12 +97,15 @@
             <div class="col-sm-12 no-padding" id="main3" style="height: 450px;"></div>
           </div>
           <div class="box-body" style="padding: 0 50px;">
-            <h3 style="margin-bottom: 20px;">国安侠饱和度分析</h3>
+              <h3 style="margin-bottom: 20px;">国安侠饱和度分析<span class="text-red" title="计算前提设定为每个门店10名国安侠编制。" style="padding-left: 0px; font-size: 26px; font-weight: bold; cursor: pointer">！</span></h3>
             <div class="col-sm-6 no-padding">在编人数：<span id="empcount">加载中...</span>人</div>
 <!--
             <div class="col-sm-4 no-padding">满编人数：<span id="fullempcount">加载中...</span>人</div>
 -->
-            <div class="col-sm-6 no-padding text-right">满编人数：<span id="fullempcount">加载中...</span>人<span class='text-red' >（满编率：<b id="emprate">加载中...</b>）</span></div>
+            <div class="col-sm-6 no-padding text-right">
+                <span class="text-red" title="设有国安侠编制的门店数×每店10人" style="padding-left: 0px; font-size: 16px; font-weight: bold; cursor: pointer">！</span>
+                满编人数：<span id="fullempcount">加载中...</span>人<span class='text-red' >（满编率：<b id="emprate">加载中...</b>）</span>
+            </div>
             <div class="progress col-sm-12 no-padding">
               <div id="emprateview" class="progress-bar progress-bar-aqua" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="sr-only">20% Complete</span>
@@ -258,13 +261,13 @@
     dataZoom: {
       show: true,
       start: 0,
-      end: 50,
+      end: 100,
       maxSpan: 100
       // zoomLock: true
     },
     xAxis: [{
       type: 'category',
-      data: ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月'],
+      data: ['1月','2月','3月','4月','5月','6月','7月','8月'],
       axisLabel:{
         textStyle:{color:'#404a59',}
       },
@@ -342,6 +345,20 @@
       itemStyle:{
         normal:{color:'#EBA954'},
       },
+        label: {
+            normal: {
+                show:true,
+                position: 'top',
+                textStyle:{
+                    color:'#ffae00',
+                },
+            },
+            emphasis: {
+                textStyle:{
+                    color:'#ffae00',
+                },
+            },
+        },
       data: []
     }]
   };
@@ -444,7 +461,7 @@
           }
         },
         axisTick: {show: false},
-        data: ["1月","2月","3月","4月","5月","6月","7月","8月","9月","10月","11月","12月"]
+        data: ["1月","2月","3月","4月","5月","6月","7月","8月"]
       }, {
         axisPointer: {show: false},
         axisLine: {
@@ -709,6 +726,18 @@
 var screenlogin=getUrlParamByKey("su");
 $(function(){
     loginShow();
+    $("#showattention").on("mouseover",function(event){
+        $("#attention").show();
+    });
+    $("#showattention").on("mouseout",function(event){
+        $("#attention").hide();
+    });
+    $("#showattention1").on("mouseover",function(event){
+        $("#attention1").show();
+    });
+    $("#showattention1").on("mouseout",function(event){
+        $("#attention1").hide();
+    });
 });
 
 function loginShow(){
@@ -772,13 +801,13 @@ function showEmployeeCount(){
             var humancount = resultJson.humancount;
             $("#gaxcount").html(humancount);
             $("#citycount").html(citycount);
-            $("#storecount").html(storeCount);
+            $("#storecount").html(360);
             $("#empcount").html(humancount);
             $("#fullempcount").html(storeCount*10)
-            var emprate =humancount*100/ (storeCount*10);
+            var emprate =humancount*100/ (360*10);
             $("#emprate").html(emprate.toFixed(2)+"%");
             $("#emprateview").attr("aria-valuenow",humancount);
-            $("#emprateview").attr("aria-valuemax",storeCount*10);
+            $("#emprateview").attr("aria-valuemax",360*10);
             $("#emprateview").attr("style","width:"+emprate.toFixed(2)+"%;");
         }
     },false);
@@ -801,7 +830,7 @@ function showEmpInfo(){
             $("#avgSendOrder").html(avgorder);
         }
     });*/
-    $("#avgSendOrder").html(53);
+    $("#avgSendOrder").html(8);
     doManager("employeeMoreInfoManager", "getAvgMileAage",null,function(data, textStatus, XMLHttpRequest) {
         if (data.result) {
             var resultJson = JSON.parse(data.data);
@@ -853,9 +882,12 @@ function showEmpAvgSendOrderInfo(){
                 for(var i = 0; i <avgSendOrderGroupByCity.length; i++){
                     var avgSendOrder = avgSendOrderGroupByCity[i];
                     var cityname =  avgSendOrder.cityname;
-                    citynameArray.push(cityname);
-                    var datanum = avgSendOrder.datanum;
-                    dataArray.push(datanum)
+                    if(cityname != '佛山市'){
+                        citynameArray.push(cityname);
+                        var datanum = avgSendOrder.datanum;
+                        dataArray.push(datanum);
+                    }
+
                 }
                 option3.xAxis[0]["data"] = citynameArray;
                 option3.series[0].data=dataArray;
