--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -209,7 +209,7 @@
                                     <dl class="col-sm-3">
                                         <dt><i></i>专题分析</dt>
                                         <dd style="position:relative;"><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a></dd>
-                                        <dd style="position:relative;"><a href="javascript:gotogax_work()"><span class="fa fa-warning"></span>国安侠工作量分析</a>
+                                        <dd style="position:relative;"><a href="javascript:gotogax_work()"><span class="fa fa-male"></span>国安侠工作量分析</a>
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                 </div>
